# md-context-kit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: public-template-rules.md  registry-format.md  token-limits.md  usage.md  why-md-context-kit.md
examples/generic/: 01_PROJECT_BRIEF.md  02_CURRENT_STATE.md  README.md
src/md_context_kit/: __init__.py  cli.py  git_status.py  scanner.py  templates.py  token_estimator.py
templates/generic/: 00_INDEX.md  01_PROJECT_BRIEF.md  02_CURRENT_STATE.md  AGENTS.md  CHANGELOG.md  context_registry.yml
